[package]
name = "riot-doc-helpers"
version = "0.1.0"
authors = ["Christian M. Amsüss <ca@etonomy.org>"]
edition = "2018"
publish = false

repository = "https://gitlab.com/etonomy/riot-sys"
documentation = "https://rustdoc.etonomy.org/riot_doc_helpers/"
license = "LGPL-2.1"

[dependencies]
riot-sys = { git = "https://gitlab.com/etonomy/riot-sys/" }
riot-wrappers= { git = "https://gitlab.com/etonomy/riot-wrappers/" }
riot-shell-commands = { git = "https://gitlab.com/etonomy/riot-examples/", features = ["saul"] }
