[package]
name = "riot-doc-helpers"
version = "0.1.0"
authors = ["Christian M. Amsüss <ca@etonomy.org>"]
edition = "2018"
publish = false

repository = "https://gitlab.com/etonomy/riot-sys"
documentation = "https://rustdoc.etonomy.org/riot_doc_helpers/"
license = "LGPL-2.1"

resolver = "2"

[dependencies]
riot-sys = { version = "*", features = [ "keep-extern-types" ] }
riot-wrappers = { version = "*", features = [ "with_coap_handler", "with_embedded_nal", "with_msg_v2", "nightly_docs", "with_embedded_nal_async", "with_embedded_hal_async", "set_panic_handler" ] }
riot-shell-commands = { git = "https://gitlab.com/etonomy/riot-module-examples/", features = ["saul", "ztimer"] }
riot-coap-handler-demos = { git = "https://gitlab.com/etonomy/riot-module-examples/", features = [ "vfs", "saul", "i2c", "gpio", "ping" ] }

[patch.crates-io]
riot-sys = { git = "https://github.com/RIOT-OS/rust-riot-wrappers/" }
riot-wrappers = { git = "https://github.com/RIOT-OS/rust-riot-wrappers/" }
